# Life-Kline-Hub-Tab

./: .env  .gitignore  Dockerfile.python  README.md  docker-compose.python.yml  index.html  package.json  pnpm-lock.yaml  resume-codex.sh  vite.config.ts
playground/vitesse-webext-bento/: extension.crx  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.mts
playground/vitesse-webext-bento/release/: vitesse-webext-bento-newtab-20260319.crx  vitesse-webext-bento-newtab-20260320.crx
playground/vitesse-webext-bento/src/: manifest.ts
public/custom/: index.css  index.js
release/: lktab-mv3-extension-20260319.crx
release/sun-panel-python-bundle/: README_DEPLOY.txt  install.sh  run.sh
release/sun-panel-python-bundle/service_python/: README.md  pyproject.toml
release/sun-panel-python-bundle/service_python/assets/: conf.example.ini  version
release/sun-panel-python-bundle/service_python/sun_panel_python/: __main__.py  package_bundle.py  prepare_runtime.py  runtime.py
release/sun-panel-python-bundle/web/: index.html
service_python/sun_panel_python/: __init__.py  app.py
service_python/tests/: test_parity.py
src/: main.ts
src/api/system/: about.ts  user.ts
src/locales/: en-US.json  index.ts  zh-CN.json
src/plugins/: assets.ts
src/store/modules/app/: helper.ts  (+1 more)
src/typings/: global.d.ts
src/utils/cmn/: index.ts
src/utils/localFirst/: cloudSync.ts  panelData.ts
src/utils/request/: axios.ts  index.ts
src/utils/runtime/: extension.ts
src/utils/storage/: extension.ts  index.ts
src/views/home/: index.vue
src/views/login/: index.vue
(+60 files in other folders)
